Reports/Experiment_Data_Mon_Nov_20_11:35:42_UTC_2017/Performance_Results/file-input-output/javascript.txt
/home/sgeorgiou/GitHub/Rosetta_Code_Research_MSR/Scripts/server/file-input-output/javascript/file-input-output.js:5
            if (err) throw err;
                     ^

Error: EMFILE: too many open files, open '../input.txt'

real	0m5.143s
user	0m5.085s
sys	0m5.429s
/home/sgeorgiou/GitHub/Rosetta_Code_Research_MSR/Scripts/server/file-input-output/javascript/output.txt:1
(function (exports, require, module, __filename, __dirname) { The Republic By Plato
                                                                  ^^^^^^^^

SyntaxError: Unexpected identifier
    at createScript (vm.js:74:10)
    at Object.runInThisContext (vm.js:116:10)
    at Module._compile (module.js:537:28)
    at Object.Module._extensions..js (module.js:584:10)
    at Module.load (module.js:507:32)
    at tryModuleLoad (module.js:470:12)
    at Function.Module._load (module.js:462:3)
    at Function.Module.runMain (module.js:609:10)
    at startup (bootstrap_node.js:158:16)
    at bootstrap_node.js:598:3

real	0m0.265s
user	0m0.252s
sys	0m0.010s
